fix avatar alignment in the DataGrid

--- a/examples/with-nextjs-and-clerk-auth/src/app/globals.css
+++ b/examples/with-nextjs-and-clerk-auth/src/app/globals.css
@@ -494,3 +494,14 @@ html {
     font-weight: 700;
   }
 }
+
+.MuiDataGrid-cell[data-field="counterpart_id"] {
+  /*padding-left: 0 !important;*/
+  .MuiChip-root {
+    padding-left: 0;
+
+    .MuiAvatar-root {
+      margin: 0;
+    }
+  }
+}
